--- a/index.html
+++ b/index.html
@@ -8,5 +8,33 @@
 </head>
 <body>
 
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Description</a></li>
+        <li><a href="#">Behaviour</a></li>
+        <li><a href="#">Conservation</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Description</h2>
+    </section>
+
+    <section>
+      <h2>Behaviour</h2>
+    </section>
+
+    <section>
+      <h2>Conservation</h2>
+    </section>
+  </main>
+
+  <footer>
+    <small>© 1821 Pangolin</small>
+  </footer>
+  
 </body>
 </html>
